# ProtocolDeveloper

./: .gitignore  .gitmodules  CMakeLists.txt  Journal.md  Main.cpp  Preload.cmake  Processor.h  ProtDevDoxy.cfg  configureBuild.sh
freeFunctionLibrary/: CMakeLists.txt  I_cNetComm.h  I_cStdLib.h  cNetComm.cpp  cNetComm.h  cStdLib.cpp  cStdLib.h
myLibraries/: CMakeLists.txt
myLibraries/communicationHandler/: CMakeLists.txt  README.md
myLibraries/communicationHandler/include/: I_communication.h
myLibraries/communicationHandler/src/: communicationHandler.cpp
myLibraries/database/: README.md
myLibraries/database/mongo/: iMongo.h
myLibraries/enumHandler/: CMakeLists.txt  README.md
myLibraries/freeFunctionsAndWrappers/: CMakeLists.txt  README.md
myLibraries/freeFunctionsAndWrappers/include/: I_cDlfcn.h  I_cNetComm.h  I_cStdLib.h  I_cStdio.h
myLibraries/freeFunctionsAndWrappers/src/: cDlfcn.cpp  cNetComm.cpp  cStdLib.cpp  cStdio.cpp
myLibraries/freeFunctionsAndWrappers/tests/: freeFunctionsAndWrappers_Tests.cpp
myLibraries/gRPCInterface/: CMakeLists.txt  README.md
myLibraries/gRPCInterface/src/: commandApi.proto
myLibraries/genTime/: genTime.c  genTime.h
myLibraries/helloWorldProtocol/: CMakeLists.txt  HelloworldSpec  README.md
myLibraries/helloWorldProtocol/include/: HelloWorldProtocol.h
myLibraries/helloWorldProtocol/src/: HelloWorldProtocol.cpp  helloWorldProtocol.cpp  protocolInterface.cpp
myLibraries/helloWorldProtocol/tests/: helloWorldProtocolTests.cpp
myLibraries/libnetworkCommunication/: CMakeLists.txt  README.md
myLibraries/libnetworkCommunication/include/: I_libNetworkCommunication.h  I_networkCommunication.h
myLibraries/libnetworkCommunication/src/: libNetworkCommunication.cpp  pluginInterface.cpp  pluginInterface.h
myLibraries/libnetworkCommunication/tests/: networkCommunication_Tests.cpp
myLibraries/logger/: CMakeLists.txt  README.md
myLibraries/logger/include/: I_LogFile.h  I_LogHandler.h  I_LogStrategy.h
myLibraries/logger/src/: LogFile.cpp  LogFile.h  LogHandler.cpp  LogHandlerStrategy.cpp  LogHandlerStrategy.h  loggerExceptions.h
myLibraries/logger/tests/: LogFileTests.cpp  LogHandlerTests.cpp  loggerStrategyTests.cpp  loggerTestsMain.cpp
myLibraries/mockLibrary/: CMakeLists.txt  README.md
myLibraries/networkCommunication/: CMakeLists.txt  README.md
myLibraries/networkCommunication/include/: I_libNetworkCommunication.h  NetworkCommunication.h
myLibraries/networkCommunication/src/: NetworkCommunication.cpp  main.cpp  networkCommunication.cpp  pluginInterface.cpp
myLibraries/networkCommunication/tests/: networkCommunication_Tests.cpp
myLibraries/pluginLoader/: CMakeLists.txt  README.md
myLibraries/pluginLoader/include/: I_PluginLoader.h  I_ProtocolInterface.h  I_communication.h  I_dllAbstract.h  I_plugin.h  I_pluginLoaderTemplate.h  I_protocolInterface.h  ProtocolPluginLoader.h
myLibraries/pluginLoader/src/: ProtocolPluginLoader.cpp  dllAbstract.cpp  dllAbstract.h  old_ProtocolPluginLoader.cpp  pluginLoader.cpp  pluginLoaderTemplate.cpp  pluginLoaderTemplate.h  pluginLoader_exception.h
myLibraries/pluginLoader/tests/: pluginLoaderTests.cpp  pluginLoaderTestsMain.cpp
myLibraries/protocolHandler/: README.md
myLibraries/protocolHandler/include/: I_ProtocolInterface.h
myLibraries/safeContainers/: CMakeLists.txt
myLibraries/safeQueues/: CMakeLists.txt  README.md
myLibraries/serviceLib/: CMakeLists.txt  README.md
myLibraries/serviceLib/include/: I_deamoniser.h  I_process.h
myLibraries/serviceLib/src/: daemoniser.cpp  serviceLib_exceptions.h
myLibraries/serviceLib/test/: testserviceLib.cpp
myLibraries/testAnalyser2/: CMakeLists.txt  sntp.xml
myLibraries/testAnalyser2/include/: I_RapidAbstract.h  I_TestAnalyser2.h
myLibraries/testAnalyser2/src/: analysisException.h  rapidAbstract.cpp  rapidAbstract.h  testAnalyser2.cpp  testFile.cpp  testObjectBuilder.cpp  testObjectBuilder.h
myLibraries/testAnalyser2/tests/: RapidAbstractTests.cpp  TestObjectBuilderTests.cpp  test.xml  testAnalyser2Tests.cpp
myLibraries/testCaseAnalyser/: CMakeLists.txt  README.md  sntp.xml
myLibraries/testCaseAnalyser/include/: S_testCaseConfiguration.h  dataEmitter.h  dataPoint.h  mathsModule.h  testCaseCompiler.h  testCaseHandler.h  testCaseParser.h  variable.h
myLibraries/testCaseAnalyser/src/: dataEmitter.cpp  dataPoint.cpp  dataPoint.h  mathsModule.cpp  mathsModule.h  opVarBase.cpp  opVarBase.h  operation.cpp  operation.h  operations.cpp  testCaseCompiler.cpp  testCaseCompiler.h  testCaseConfiguration_s.h  testCaseException.h  testCaseParser.cpp  testCaseParser.h  variable.cpp  variable.h
myLibraries/testHandler/: CMakeLists.txt
myLibraries/testHandler/src/: notes.txt
myLibraries/testRunner/: CMakeLists.txt  README.md
myLibraries/testRunner/include/: I_testRunner.h  I_testThread.h
myLibraries/testRunner/src/: TestRunner.cpp  TestRunner.h  testRunner.cpp  testRunner.h  testThread.cpp  testThread.h
myLibraries/testRunner/tests/: testRunnerTests.cpp  testRunnerTestsMain.cpp
myLibraries/threadPool/: CMakeLists.txt  README.md
myLibraries/threadPool/include/: I_ThreadPool.h  I_WorkerThread.h
myLibraries/threadPool/src/: I_WorkerThread.h  ThreadPool.cpp  WorkerThread.cpp  WorkerThread.h
myLibraries/threadPool/tests/: ThreadPool_Tests.cpp
myLibraries/timeKeeping/: CMakeLists.txt
myLibraries/timeTicker/: CMakeLists.txt  README.md
myLibraries/timeTicker/include/: I_TimeTicker.h  I_TimeTickerFactory.h  I_gMTHandler.h  I_timeTicker.h
myLibraries/timeTicker/src/: TimeTicker.cpp  TimeTicker.h  gMTHandler.cpp  gMTHandler.h  genTime.c  genTimePrivate.h  timeSpec.cpp  timeSpec.h  timeTicker.cpp  timeTickerDefinitions.h  timeTrackerFactory.cpp  timeVal.cpp  timeVal.h  wallClock.cpp  (+3 more)
myLibraries/unitTestUtility/: CMakeLists.txt
myLibraries/utility/: CMakeLists.txt  README.md
myLibraries/utilityFunctions/: CMakeLists.txt
testCaseHandler/: CMakeLists.txt  S_testCaseConfiguration.h  dataEmitter.h  dataPoint.cpp  dataPoint.h  operations.h  sntp.xml  testCaseException.h  testCaseParser.h  variable.cpp
(+2190 files in other folders)
