## Small and Header Only safeContainers Libraries ##
add_subdirectory(safeContainers)
add_subdirectory(utility)
add_subdirectory(mockLibrary)
add_subdirectory(freeFunctionsAndWrappers)

## Core Libraries #
add_subdirectory(logger)
add_subdirectory(pluginLoader)
add_subdirectory(testAnalyser2)
add_subdirectory(threadPool)
add_subdirectory(testRunner)
add_subdirectory(database)
add_subdirectory(gRPCInterface)

## Shared Objects/Plugins ##
add_subdirectory(networkCommunication)
add_subdirectory(helloWorldProtocol)
